Creating rate limit of APIs access
Signed-off-by: Icaro Gabriel Marques Afonso <icaro.afonso@zup.com.br>

--- a/moove/pom.xml
+++ b/moove/pom.xml
@@ -52,6 +52,7 @@
         <cglib.nodep.version>3.3.0</cglib.nodep.version>
         <hibernate.types.version>2.5.0</hibernate.types.version>
         <spring.jdbc.version>5.2.4.RELEASE</spring.jdbc.version>
+        <bucket4j-core.version>4.10.0</bucket4j-core.version>
         <liquibase.core.version>3.8.7</liquibase.core.version>
         <spock.core.version>1.0-groovy-2.4</spock.core.version>
         <groovy.all.version>2.4.7</groovy.all.version>
@@ -95,6 +96,11 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.github.vladimir-bukhtoyarov</groupId>
+                <artifactId>bucket4j-core</artifactId>
+                <version>${bucket4j-core.version}</version>
+            </dependency>
             <dependency>
                 <groupId>io.github.openfeign</groupId>
                 <artifactId>feign-jackson</artifactId>
@@ -256,7 +262,6 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
     <build>
         <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
         <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
