--- a/moove/web/src/main/resources/application-k8s.properties
+++ b/moove/web/src/main/resources/application-k8s.properties
@@ -27,3 +27,7 @@ charlescd.keycloak.clientSecret=${KEYCLOAK_CLIENT_SECRET}
 
 encryption.key=${ENCRYPTION_KEY}
 charles.internal.idm.enabled=${INTERNAL_IDM_ENABLED}
+
+charlescd.ratelimit.capacity=${RATELIMIT_CAPACITY}
+charlescd.ratelimit.tokens=${RATELIMIT_TOKENS}
+charlescd.ratelimit.seconds=${RATELIMIT_SECONDS}
