--- a/moove/web/src/main/resources/application-local.properties
+++ b/moove/web/src/main/resources/application-local.properties
@@ -23,3 +23,7 @@ charlescd.keycloak.public.clientId=charlescd-public
 charlescd.keycloak.clientId=charlescd
 charlescd.keycloak.clientSecret=your-secret-key
 charles.internal.idm.enabled=true
+
+charlescd.ratelimit.capacity=1
+charlescd.ratelimit.tokens=1
+charlescd.ratelimit.seconds=1
