Adding condition on keycloaks response

--- a/install/helm-chart/charts/envoy/templates/envoy-conf.yml
+++ b/install/helm-chart/charts/envoy/templates/envoy-conf.yml
@@ -109,7 +109,10 @@ data:
                       250,
                       false
                       )
-                      request_handle:respond(headers,body)
+                      request_handle:logInfo(headers[":status"])
+                      if headers[":status"] ~= "200" then
+                        request_handle:respond(headers,body)
+                      end
                     end
               - name: envoy.filters.http.router
                 typed_config: {}
