--- a/.github/workflows/keycloak-ci.yaml
+++ b/.github/workflows/keycloak-ci.yaml
@@ -2,6 +2,8 @@ name: Deploy
 on:
   push:
     branches: [main]
+    paths:
+      - 'keycloak/**'
 
 jobs:
   build:
@@ -16,23 +18,21 @@ jobs:
     - name: Docker Buildx
       uses: docker/setup-buildx-action@v1
 
-    - name: Login in DockerHub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
     
     - name: bump version
       id: tagging
       uses: mathieudutour/github-tag-action@v4.5
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-    
-    - name: Build and Push
-      id: docker_build
-      uses: docker/build-push-action@v2
+
+    - name: Build and push Docker images
+      uses: docker/build-push-action@v1.0.1
       with:
-        push: true
-        context: .
-        file: ./Dockerfile
-        tags: zupcharles/keycloak:${{ steps.tagging.outputs.new_version }}
+        path: ./keycloak
+        username: ${{secrets.DOCKERHUB_USERNAME}}
+        password: ${{secrets.DOCKERHUB_PASSWORD}}
+        repository: zupcharles/charlescd-keycloak
+        dockerfile: ./keycloak/Dockerfile
+        tags: latest,${{ steps.tagging.outputs.new_version }}
+        tag_with_ref: false
+        tag_with_sha: false
