Templating nginx ingress controller instalation and some ingress' values
Signed-off-by: Mateus Cruz <emiteze@hotmail.com>

--- a/install/helm-chart/charts/ingress/templates/controller-service.yaml
+++ b/install/helm-chart/charts/ingress/templates/controller-service.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.ingress.controller.nginx.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -26,3 +27,4 @@ spec:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/component: controller
+{{- end}}
