--- a/install/helm-chart/charts/ingress/templates/controller-serviceaccount.yaml
+++ b/install/helm-chart/charts/ingress/templates/controller-serviceaccount.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.ingress.controller.nginx.enabled }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -10,3 +11,4 @@ metadata:
     app.kubernetes.io/component: controller
   name: ingress-nginx
   namespace: charles
+{{- end}}
