--- a/install/helm-chart/charts/ingress/templates/clusterrole.yaml
+++ b/install/helm-chart/charts/ingress/templates/clusterrole.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.ingress.controller.nginx.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
@@ -66,3 +67,4 @@ rules:
       - get
       - list
       - watch
+{{- end}}
