--- a/install/helm-chart/charts/ingress/templates/clusterrolebinding.yaml
+++ b/install/helm-chart/charts/ingress/templates/clusterrolebinding.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.ingress.controller.nginx.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
@@ -16,3 +17,4 @@ subjects:
   - kind: ServiceAccount
     name: ingress-nginx
     namespace: charles
+{{- end}}
