--- a/install/helm-chart/charts/ingress/templates/controller-configmap.yaml
+++ b/install/helm-chart/charts/ingress/templates/controller-configmap.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.ingress.controller.nginx.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -11,3 +12,4 @@ metadata:
   name: ingress-nginx-controller
   namespace: charles
 data:
+{{- end}}
