--- a/install/helm-chart/charts/ingress/templates/controller-deployment.yaml
+++ b/install/helm-chart/charts/ingress/templates/controller-deployment.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.ingress.controller.nginx.enabled }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -100,3 +101,4 @@ spec:
         kubernetes.io/os: linux
       serviceAccountName: ingress-nginx
       terminationGracePeriodSeconds: 300
+{{- end}}
