--- a/install/helm-chart/charts/ingress/templates/controller-role.yaml
+++ b/install/helm-chart/charts/ingress/templates/controller-role.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.ingress.controller.nginx.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
@@ -91,3 +92,4 @@ rules:
     verbs:
       - create
       - patch
+{{- end}}
