--- a/install/helm-chart/charts/ingress/templates/controller-rolebinding.yaml
+++ b/install/helm-chart/charts/ingress/templates/controller-rolebinding.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.ingress.controller.nginx.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
@@ -18,3 +19,4 @@ subjects:
   - kind: ServiceAccount
     name: ingress-nginx
     namespace: charles
+{{- end}}
