Updating ingress chart

--- a/install/helm-chart/charts/ingress/templates/ingress.yaml
+++ b/install/helm-chart/charts/ingress/templates/ingress.yaml
@@ -2,14 +2,14 @@ apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   annotations:
-    kubernetes.io/ingress.class: {{ .Values.ingress.class }}
-    {{ if .Values.ingress.controller.nginx.enabled }}
+    kubernetes.io/ingress.class: {{ .Values.class }}
+    {{ if .Values.controller.nginx.enabled }}
     nginx.ingress.kubernetes.io/rewrite-target: /$1
     {{- end}}
   name: charlescd-ingress
 spec:
   rules:
-  - host: {{ .Values.ingress.host }}
+  - host: {{ .Values.host }}
     http:
       paths:
       - path: /(.*)
