--- a/install/helm-chart/charts/ingress/templates/controller-deployment.yaml
+++ b/install/helm-chart/charts/ingress/templates/controller-deployment.yaml
@@ -1,4 +1,4 @@
-{{ if .Values.ingress.controller.nginx.enabled }}
+{{ if .Values.controller.nginx.enabled }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
