--- a/install/helm-chart/charts/ingress/templates/controller-service.yaml
+++ b/install/helm-chart/charts/ingress/templates/controller-service.yaml
@@ -1,4 +1,4 @@
-{{ if .Values.ingress.controller.nginx.enabled }}
+{{ if .Values.controller.nginx.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
