Initial implementation of search by name in registries POC
Signed-off-by: Icaro Gabriel Marques Afonso <icaro.afonso@zup.com.br>

--- a/moove/web/src/main/resources/application-local.properties
+++ b/moove/web/src/main/resources/application-local.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/charles
-spring.datasource.username=charles
-spring.datasource.password=charles
+spring.datasource.url=jdbc:postgresql://a7533d24da1fe4bd9a72b0d731ff1cdc-7b7f678ad579bc65.elb.us-east-1.amazonaws.com:5432/charlescd_moove
+spring.datasource.username=charlescd_moove
+spring.datasource.password=7Qs2KuM9gYzw48BS
 
 charlescd.notification.path=/notifications
 charlescd.notification.title.add.member.card="%s te adicionou no card %s"	charlescd.notification.title.add.member.card="%s te adicionou no card %s"
@@ -8,7 +8,7 @@ charlescd.notification.title.add.comment.card="%s comentou no card %s"	charlescd
 charlescd.notification.title.new.feature.card="%s criou uma feature no card %s"	charlescd.notification.title.new.feature.card="%s criou uma feature no card %s"
 charlescd.notification.title.new.release="%s gerou uma release %s" 	charlescd.notification.title.new.release="%s gerou uma release %s"
 
-charlescd.villager.url=http://localhost:8883
+charlescd.villager.url=http://localhost:9091
 charlescd.deploy.url=http://localhost:8883
 charlescd.moove.url=http://localhost:8883
 charlescd.notification.url=http://localhost:8883
