--- a/villager/pom.xml
+++ b/villager/pom.xml
@@ -41,6 +41,7 @@
         <apache.lang3.version>3.8.1</apache.lang3.version>
         <aspectj.version>1.9.2</aspectj.version>
         <logback.version>1.1.7</logback.version>
+        <jedis.version>3.2.0</jedis.version>
         <sdk.aws.version>1.11.830</sdk.aws.version>
         <jacoco.version>0.8.4</jacoco.version>
         <springfox.swagger.version>2.9.2</springfox.swagger.version>
@@ -81,6 +82,10 @@
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-scheduler</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-redis-client</artifactId>
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
@@ -189,6 +194,11 @@
             <artifactId>hamcrest-all</artifactId>
             <version>1.3</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>${jedis.version}</version>
         </dependency>
     </dependencies>
 
