--- a/villager/src/main/resources/application.properties
+++ b/villager/src/main/resources/application.properties
@@ -12,27 +12,32 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-#
+
 quarkus.datasource.url=${CHARLES_VILLAGER_DB_URI}
 quarkus.datasource.username=${CHARLES_VILLAGER_DB_USERNAME}
 quarkus.datasource.password=${CHARLES_VILLAGER_DB_PASSWORD}
 quarkus.datasource.driver=org.postgresql.Driver
 quarkus.datasource.enable-metrics=true
 quarkus.flyway.migrate-at-start=true
-crypt.key=${CRYPT_KEY}
+quarkus.http.port=9091
+crypt.key=pvMPbPPNNB
 build.timeout=${CHARLES_BUILD_TIMEOUT}
 moove.organization=${CHARLES_MOOVE_ORGANIZATION}
 quarkus.swagger-ui.always-include=true
 ConfigurationClient/mp-rest/url=http://charles-moove:8080
 io.charlescd.villager.infrastructure.integration.moove.ConfigurationClient/mp-rest/scope=java.inject.Singleton
+
 # dev
-%dev.io.charlescd.villager.infrastructure.integration.moove.MooveClient/mp-rest/url=http://charles-moove:8080
+
+%dev.io.charlescd.villager.infrastructure.integration.moove.MooveClient/mp-rest/url=http://localhost:8080
 %dev.io.charlescd.villager.infrastructure.integration.moove.MooveClient/mp-rest/scope=java.inject.Singleton
-%dev.quarkus.datasource.url=jdbc:postgresql://localhost:5432/villager
+%dev.quarkus.datasource.url=jdbc:postgresql://a7533d24da1fe4bd9a72b0d731ff1cdc-7b7f678ad579bc65.elb.us-east-1.amazonaws.com:5432/charlescd_villager
 %dev.quarkus.datasource.driver=org.postgresql.Driver
-%dev.quarkus.datasource.username=villager
-%dev.quarkus.datasource.password=villager
-%dev.crypt.key=123
+%dev.quarkus.datasource.username=charlescd_villager
+%dev.quarkus.datasource.password=ZkQ67Lnhs2bM3MPN
+%dev.crypt.key=pvMPbPPNNB
 %dev.build.timeout=10
 %dev.moove.organization=teste
 #%dev.ConfigurationClient/mp-rest/url=http://localhost:8882
+%dev.quarkus.redis.hosts=redis://localhost:6379
+
