Generate manifest with kubernetes types
Signed-off-by: Leandro Rodrigues <leandro.rodrigues@zup.com.br>

--- a/butler/package.json
+++ b/butler/package.json
@@ -20,6 +20,7 @@
     "test:all:cov": "jest --runInBand --coverage --forceExit"
   },
   "dependencies": {
+    "@kubernetes/client-node": "^0.13.0",
     "@nestjs/common": "^7.4.2",
     "@nestjs/config": "^0.4.2",
     "@nestjs/core": "^7.4.2",
