--- a/install/helm-chart/values.yaml
+++ b/install/helm-chart/values.yaml
@@ -197,6 +197,10 @@ envoy:
     enabled: true
   cors:
     enabled: true
+  idm:
+    endpoint: charlescd-keycloak-http
+    port: 80
+    path: /keycloak/auth/realms/charlescd/protocol/openid-connect/userinfo
 
 ingress:
   host: charles.info.example
