--- a/.github/workflows/charlescd-prodrelease.yml
+++ b/.github/workflows/charlescd-prodrelease.yml
@@ -177,7 +177,7 @@ jobs:
 
     - run: yarn install
       working-directory: ./ui
-    - run: yarn build
+    - run: yarn build:all
       working-directory: ./ui
       env:
         CI: true
