--- a/circle-matcher/docker-compose.yml
+++ b/circle-matcher/docker-compose.yml
@@ -3,7 +3,7 @@ version: '2'
 services:
 
   redis:
-    image: 'bitnami/redis:3.2.9-r3'
+    image: 'docker.io/bitnami/redis:3.2.9-r3'
     ports:
       - '6379:6379'
     environment:
