Created a purge mechanism of cache, and unit tests.
Signed-off-by: Icaro Gabriel Marques Afonso <icaro.afonso@zup.com.br>

--- a/villager/src/main/resources/application.properties
+++ b/villager/src/main/resources/application.properties
@@ -21,6 +21,7 @@ quarkus.datasource.enable-metrics=true
 quarkus.flyway.migrate-at-start=true
 crypt.key=${CRYPT_KEY}
 build.timeout=${CHARLES_BUILD_TIMEOUT}
+redis.key.expire.timeout=${REDIS_KEY_EXPIRE_TIMEOUT}
 moove.organization=${CHARLES_MOOVE_ORGANIZATION}
 quarkus.swagger-ui.always-include=true
 ConfigurationClient/mp-rest/url=http://charles-moove:8080
@@ -37,3 +38,4 @@ io.charlescd.villager.infrastructure.integration.moove.ConfigurationClient/mp-re
 %dev.moove.organization=teste
 #%dev.ConfigurationClient/mp-rest/url=http://localhost:8882
 %dev.quarkus.redis.hosts=localhost:6379
+%dev.redis.key.expire.timeout=60
