Configure helm on Dockerfile
Signed-off-by: Leandro Rodrigues <leandro.rodrigues@zup.com.br>

--- a/butler/Dockerfile
+++ b/butler/Dockerfile
@@ -6,6 +6,14 @@ ENV CONSUL_HOST consul-server
 
 ENV APP_PATH /opt/darwin-deploy
 
+RUN apk upgrade --update-cache --available && \
+    apk add openssl && \
+    rm -rf /var/cache/apk/*
+
+RUN wget -q -O - https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | /bin/sh
+
+RUN helm version
+
 RUN mkdir -p $APP_PATH
 WORKDIR $APP_PATH
 
