--- a/install/helm-chart/charts/envoy/templates/envoy-deployment.yml
+++ b/install/helm-chart/charts/envoy/templates/envoy-deployment.yml
@@ -17,12 +17,22 @@ spec:
       containers:
         - name: envoy-proxy
           image: envoyproxy/envoy-dev:latest
+          lifecycle:
+            postStart:
+              exec:
+                command: ["/bin/sh", "-c", "apt update && apt install libcurl4-openssl-dev -y"]
           ports:
           - containerPort: 80
           env:
             - name: ENVOY_UID
               value: "0"
           volumeMounts:
+            - name: lua-config
+              mountPath: /usr/local/share/lua/5.1/luajit-init.lua
+              subPath: luajit-init.lua
+            - name: lua-config
+              mountPath: /usr/local/share/lua/5.1/luajit-curl.lua
+              subPath: luajit-curl.lua
             - name: envoy-config
               mountPath: /etc/envoy/envoy.yaml
               subPath: envoy.yaml
@@ -30,3 +40,6 @@ spec:
         - name: envoy-config
           configMap:
             name: confenvoy
+        - name: lua-config
+          configMap:
+            name: conflua
