--- a/install/helm-chart/charts/envoy/values.yaml
+++ b/install/helm-chart/charts/envoy/values.yaml
@@ -16,3 +16,4 @@ idm:
   endpoint: charlescd-keycloak-http
   port: 80
   path: /keycloak/auth/realms/charlescd/protocol/openid-connect/userinfo
+  protocol: http
