--- a/butler/package.json
+++ b/butler/package.json
@@ -20,6 +20,7 @@
     "test:all:cov": "jest --runInBand --coverage --forceExit"
   },
   "dependencies": {
+    "@kubernetes/client-node": "^0.13.0",
     "@nestjs/common": "^7.4.2",
     "@nestjs/config": "^0.4.2",
     "@nestjs/core": "^7.4.2",
@@ -27,6 +28,7 @@
     "@nestjs/swagger": "^4.5.12",
     "@nestjs/typeorm": "^7.1.0",
     "@octokit/rest": "^16.43.1",
+    "@types/rimraf": "^3.0.0",
     "@types/stack-trace": "0.0.29",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.11.1",
