fixed redis properties
Signed-off-by: Icaro Gabriel Marques Afonso <icaro.afonso@zup.com.br>

--- a/villager/src/main/resources/application.properties
+++ b/villager/src/main/resources/application.properties
@@ -21,11 +21,20 @@ quarkus.datasource.enable-metrics=true
 quarkus.flyway.migrate-at-start=true
 crypt.key=${CRYPT_KEY}
 build.timeout=${CHARLES_BUILD_TIMEOUT}
-redis.key.expire.timeout=${REDIS_KEY_EXPIRE_TIMEOUT}
+
 moove.organization=${CHARLES_MOOVE_ORGANIZATION}
 quarkus.swagger-ui.always-include=true
 ConfigurationClient/mp-rest/url=http://charles-moove:8080
 io.charlescd.villager.infrastructure.integration.moove.ConfigurationClient/mp-rest/scope=java.inject.Singleton
+
+# REDIS CONFIGURATION
+redis.key.expire.timeout=${REDIS_KEY_EXPIRE_TIMEOUT}
+
+### STANDALONE ###
+#redis://default:<password>@<hostname>:<port>
+quarkus.redis.hosts=${QUARKUS_REDIS_HOSTS}
+
+
 # dev
 %dev.io.charlescd.villager.infrastructure.integration.moove.MooveClient/mp-rest/url=http://charles-moove:8080
 %dev.io.charlescd.villager.infrastructure.integration.moove.MooveClient/mp-rest/scope=java.inject.Singleton
