--- a/butler/src/resources/k8s-crds/CharlesDeployment-crd.yaml
+++ b/butler/src/resources/k8s-crds/CharlesDeployment-crd.yaml
@@ -1,9 +1,9 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: charlesdeployments.zupit.com
+  name: charlesdeployments.charlescd.io
 spec:
-  group: zupit.com
+  group: charlescd.io
   versions:
     - name: v1
       served: true
