--- a/butler/src/resources/k8s-crds/CharlesRoutes-crd.yaml
+++ b/butler/src/resources/k8s-crds/CharlesRoutes-crd.yaml
@@ -1,9 +1,9 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: charlesroutes.zupit.com
+  name: charlesroutes.charlescd.io
 spec:
-  group: zupit.com
+  group: charlescd.io
   versions:
     - name: v1
       served: true
@@ -15,24 +15,32 @@ spec:
             spec:
               type: object
               properties:
-                circles:
+                components:
                   type: array
                   items:
                     type: object
                     properties:
-                      id:
+                      name:
                         type: string
-                      components:
+                      circles:
                         type: array
                         items:
-                          type: string
+                          type: object
+                          properties:
+                            id:
+                              type: string
+                            tag:
+                              type: string
+                          required:
+                            - id
+                            - tag
                     required:
-                      - id
-                      - components
+                      - name
+                      - circles
               required:
-                - circles
+                - components
   names:
-    kind: CharlesRoute
+    kind: CharlesRoutes
     plural: charlesroutes
     singular: charlesroute
   scope: Namespaced
