Adding RBAC configuration
Signed-off-by: Lucas Borges Fernandes <lucasbfernandes94@gmail.com>

--- a/install/helm-chart/templates/charlescd-butler-deployment.yaml
+++ b/install/helm-chart/templates/charlescd-butler-deployment.yaml
@@ -21,6 +21,7 @@ spec:
         app: {{ .Values.butler.name }}
         version: {{ .Values.butler.name }}
     spec:
+      serviceAccountName: {{ .Release.Name }}-charlescd-butler
       initContainers:
       - name: check-db-ready
         image: postgres:9.6.5
