Separating in CRD folders
Signed-off-by: Lucas Borges Fernandes <lucasbfernandes94@gmail.com>

--- a/install/helm-chart/requirements.yaml
+++ b/install/helm-chart/requirements.yaml
@@ -9,3 +9,5 @@ dependencies:
   condition: nginx.enabled
 - name: keycloak
   condition: keycloak.enabled
+- name: metacontroller
+  conditon: metacontroller.enabled
