--- a/install/helm-chart/charts/metacontroller/templates/metacontroller-rbac.yaml
+++ b/install/helm-chart/charts/metacontroller/templates/metacontroller-rbac.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: metacontroller
-  namespace: metacontroller
+  namespace: {{ .Release.Namespace }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
