--- a/install/helm-chart/charts/metacontroller/templates/metacontroller.yaml
+++ b/install/helm-chart/charts/metacontroller/templates/metacontroller.yaml
@@ -1,55 +1,10 @@
-apiVersion: apiextensions.k8s.io/v1beta1
-kind: CustomResourceDefinition
-metadata:
-  name: compositecontrollers.metacontroller.k8s.io
-spec:
-  group: metacontroller.k8s.io
-  version: v1alpha1
-  scope: Cluster
-  names:
-    plural: compositecontrollers
-    singular: compositecontroller
-    kind: CompositeController
-    shortNames:
-    - cc
-    - cctl
----
-apiVersion: apiextensions.k8s.io/v1beta1
-kind: CustomResourceDefinition
-metadata:
-  name: decoratorcontrollers.metacontroller.k8s.io
-spec:
-  group: metacontroller.k8s.io
-  version: v1alpha1
-  scope: Cluster
-  names:
-    plural: decoratorcontrollers
-    singular: decoratorcontroller
-    kind: DecoratorController
-    shortNames:
-    - dec
-    - decorators
----
-apiVersion: apiextensions.k8s.io/v1beta1
-kind: CustomResourceDefinition
-metadata:
-  name: controllerrevisions.metacontroller.k8s.io
-spec:
-  group: metacontroller.k8s.io
-  version: v1alpha1
-  scope: Namespaced
-  names:
-    plural: controllerrevisions
-    singular: controllerrevision
-    kind: ControllerRevision
----
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   labels:
     app.kubernetes.io/name: metacontroller
-  name: metacontroller
-  namespace: {{ .Values.namespace }}
+  name: {{ .Release.Name }}-metacontroller
+  namespace: {{ .Release.Namespace }}
 spec:
   replicas: 1
   selector:
@@ -75,7 +30,7 @@ spec:
 apiVersion: metacontroller.k8s.io/v1alpha1
 kind: CompositeController
 metadata:
-  name: charlescd-controller
+  name: charlesdeployments-controller
 spec:
   generateSelector: true
   parentResource:
@@ -94,7 +49,7 @@ spec:
 apiVersion: metacontroller.k8s.io/v1alpha1
 kind: CompositeController
 metadata:
-  name: charlescd-controller
+  name: charlesroutes-controller
 spec:
   generateSelector: true
   parentResource:
