--- a/install/helm-chart/values.yaml
+++ b/install/helm-chart/values.yaml
@@ -11,8 +11,8 @@ butler:
     ssl: false
   replicaCount: 1
   image:
-    name: charlescd-butler:1.0
-    pullPolicy: Never
+    name: zupcharles/charlescd-butler:0.4.4
+    pullPolicy: Always
   service:
     name: charlescd-butler
     type: ClusterIP
@@ -117,7 +117,7 @@ ui:
       memory: 64Mi
 
 circlematcher:
-  enabled: false
+  enabled: true
   name: charlescd-circle-matcher
   redis:
     host: charlescd-redis-master
@@ -144,7 +144,7 @@ circlematcher:
       memory: 128Mi
 
 keycloak:
-  enabled: false
+  enabled: true
   keycloak:
     extraEnv: |
       - name: PROXY_ADDRESS_FORWARDING
@@ -178,11 +178,11 @@ postgresql:
   postgresqlPassword: "firstpassword"
 
 redis:
-  enabled: false
+  enabled: true
   password: "hb2Fj9MGKjBkZ6zV"
 
 nginx:
-  enabled: false
+  enabled: true
   ui:
     enabled: true
   moove:
@@ -256,6 +256,3 @@ compass:
     requests:
       cpu: 64m
       memory: 64Mi
-
-metacontroller:
-  enabled: true
