wip upgrade react scripts
Signed-off-by: bCatanant <bruno.catanant@zup.com.br>

--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -20,13 +20,18 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react-jsx",
+    "noFallthroughCasesInSwitch": true
   },
   "include": [
     "src"
   ],
   "paths": {
-    "core/*": ["core/*"],
-    "unit-test/*": ["unit-test/*"]
+    "core/*": [
+      "core/*"
+    ],
+    "unit-test/*": [
+      "unit-test/*"
+    ]
   }
 }
