--- a/install/helm-chart/charts/metacontroller/crds/metacontroller-crds.yaml
+++ b/install/helm-chart/charts/metacontroller/crds/metacontroller-crds.yaml
@@ -37,37 +37,8 @@ metadata:
 spec:
   group: metacontroller.k8s.io
   version: v1alpha1
-  scope: Namespaced
+  scope: Cluster
   names:
     plural: controllerrevisions
     singular: controllerrevision
     kind: ControllerRevision
----
-apiVersion: apps/v1
-kind: StatefulSet
-metadata:
-  labels:
-    app.kubernetes.io/name: metacontroller
-  name: metacontroller
-  namespace: metacontroller
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app.kubernetes.io/name: metacontroller
-  serviceName: ""
-  template:
-    metadata:
-      labels:
-        app.kubernetes.io/name: metacontroller
-    spec:
-      serviceAccountName: metacontroller
-      containers:
-      - name: metacontroller
-        image: metacontroller/metacontroller:v0.4.0
-        command: ["/usr/bin/metacontroller"]
-        args:
-        - --logtostderr
-        - -v=4
-        - --discovery-interval=20s
-  volumeClaimTemplates: []
