--- a/butler/docker-compose.yml
+++ b/butler/docker-compose.yml
@@ -24,13 +24,12 @@ services:
       - ./src/resources/stubby/integrations.yml:/usr/local/stubby.yml
 
   app:
-    image: node:12.17.0-alpine3.9
+    build:
+      context: ./
+      dockerfile: Dockerfile
     depends_on:
       - stubby4j
-    volumes:
-    - ./:/app
-    working_dir: /app
-    command: sh -c 'while sleep 3600; do :; done'
+    entrypoint: sh -c 'while sleep 3600; do :; done'
     environment:
         TZ: America/Sao_Paulo
         DEPLOYMENT_EXPIRE_TIME: 25
