--- a/install/helm-chart/requirements.yaml
+++ b/install/helm-chart/requirements.yaml
@@ -17,4 +17,4 @@ dependencies:
 - name: ingress-nginx
   version: "3.15.2"
   repository: "https://kubernetes.github.io/ingress-nginx"
-  condition: ingress.enabled
+  condition: nginx_ingress_controller.enabled
