final adjustments nginx-ingress-controller
Signed-off-by: Célio José dos Santos Filho <cjsantosf@gmail.com>

--- a/install/helm-chart/values.yaml
+++ b/install/helm-chart/values.yaml
@@ -213,8 +213,10 @@ nginx_ingress_controller:
 
 ingress-nginx:
   controller:
-    extraArgs:
-      default-ssl-certificate: "default/nginx-certs"
+    service:
+      annotations: {}
+##    extraArgs:
+##      default-ssl-certificate: "namespace/secret"
 
 octopipe:
   enabled: true
