--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -20,18 +20,13 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
-    "noFallthroughCasesInSwitch": true
+    "jsx": "react"
   },
   "include": [
     "src"
   ],
   "paths": {
-    "core/*": [
-      "core/*"
-    ],
-    "unit-test/*": [
-      "unit-test/*"
-    ]
+    "core/*": ["core/*"],
+    "unit-test/*": ["unit-test/*"]
   }
 }
