--- a/ui/package.json
+++ b/ui/package.json
@@ -18,7 +18,7 @@
     "debounce-promise": "^3.1.2",
     "http-proxy-middleware": "^1.0.4",
     "jwt-decode": "^2.2.0",
-    "react": "^17.0.1",
+    "react": "^16.12.0",
     "react-ace": "^8.1.0",
     "react-apexcharts": "^1.3.6",
     "react-beautiful-dnd": "^13.0.0",
@@ -43,6 +43,7 @@
     "test": "react-scripts test --watchAll=false --testPathIgnorePatterns='fixtures.ts'",
     "test:coverage": "react-scripts test --watchAll=false --coverage --testPathIgnorePatterns='fixtures.ts'",
     "test:watch": "react-scripts test --testPathIgnorePatterns='fixtures.ts'",
+    "lint": "eslint './src/**/*.{ts,tsx}'",
     "build": "react-scripts build",
     "build:microfrontend": "react-app-rewired build",
     "build:all": "yarn build && yarn build:microfrontend",
@@ -90,7 +91,6 @@
     ]
   },
   "devDependencies": {
-    "@hapi/hapi": "^20.0.3",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/react-hooks": "^3.4.2",
@@ -104,18 +104,29 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/react-select": "^3.0.11",
     "@types/styled-components": "^5.0.1",
+    "@typescript-eslint/eslint-plugin": "^2.20.0",
+    "@typescript-eslint/parser": "^2.20.0",
     "dayjs": "^1.8.21",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-react": "^1.1.7",
+    "eslint-plugin-jest-dom": "^3.2.2",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-testing-library": "^3.8.0",
     "esm": "^3.2.25",
+    "hapi": "^18.1.0",
     "jest-fetch-mock": "^3.0.3",
     "lodash": "^4.17.15",
     "mutation-observer": "^1.0.3",
     "mutationobserver-shim": "^0.3.7",
     "nodemon": "^2.0.4",
+    "prettier": "^1.19.1",
     "react-app-rewired": "^2.1.6",
     "react-content-loader": "^5.0.2",
-    "react-scripts": "4.0.1",
+    "react-scripts": "3.4.1",
     "react-select-event": "^4.1.4",
     "react-test-renderer": "^16.13.0",
-    "typescript": "4.1.2"
+    "typescript": "3.8.3"
   }
 }
